<resources>
    <string name="app_name">MVPTestApplication</string>
    <string name="user_name">Username</string>
    <string name="log_in">Login</string>
    <string name="login_caps">LOGIN</string>
    <string name="Reset_password">RESET YOUR PASSWORD?</string>

    <string name="txt_skip">Skip</string>
    <string name="txt_notti_surprise">A NOTTI surprise awaits</string>
    <string name="age_summary">NG conatins age sensitive material,consectetur adipisicing elit.</string>
    <string name="txt_above_18">I\'m above 18</string>
    <string name="txt_below_18">I\'m below 18</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up_now">Sign Up Now! \n Get 100 notti Coins</string>
    <string name="forgot_pasword">Forgot password ? Click here</string>
    <string name="login_via_gmail">Login via Gmail to get 200 notti coins</string>
    <string name="sign_up_for_free">Sign up for your FREE Account\n get 100 notti coins</string>
    <string name="username">Username</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="not_your_first_login">Not your first time being notti ?  Login</string>
    <string name="cant_empty">Can\'t be empty</string>
    <string name="valid_email">Please enter a valid email</string>
    <string name="password_validation">atleast 6 characters required</string>
    <string name="password_didnt_match">Password do not match</string>
    <string name="location_text">notti Games would like to check your location to make sure you\'re in an area where our service is available.</string>
    <string name="next">Next</string>
    <string name="allow">Allow</string>
    <string name="Exit">Exit</string>
    <string name="log_out">Log out</string>
    <string name="add_payment">Add payment Method</string>
    <string name="add_payment_message">Notti Games uses this to verify your account and make payments easily. Your account will not be charged.</string>
    <string name="not_above_18">we can\'t let you in at the moment.Come back when you turn 18, it will be worth the wait.</string>
    <string name="almost_there">You\'re Almost There!</string>
    <string name="Credit_card">Credit Card</string>
    <string name="card_number">Card Number</string>
    <string name="customername">Name</string>
    <string name="notti_games">NOTTI GAMES</string>
    <string name="txt_hot_girls">Hot girls</string>
    <string name="txt_free_games">Free games</string>
    <string name="txt_rate_games">Rate games</string>
    <string name="txt_store">Store</string>
    <string name="not_valid_number">Not a valid number</string>
    <string name="not_valid_cvv">Not a valid cvv</string>
    <string name="search">Search by keyboard</string>
    <string name="new_updated">New Plus Updated</string>
    <string name="notti_recommends">Notti Recommends</string>
    <string name="rate_this">Rate this game:</string>
    <string name="notti_stock">The notti store is chock full of great deals.Stock up now!</string>
    <string name="featured">Featured</string>
    <string name="please_wait">Please wait</string>
    <string name="failed_to_connect_to_server">Failed to connect to server!</string>
    <string name="set">Set</string>
    <string name="cancel" >Cancel</string>
    <string name="registered_mail">Type in your registered email</string>
    <string name="ok">Ok</string>
    <string name="retype_new_password">Retype new password</string>
    <string name="code_sent_msg">A verification code will be sent to your registered email</string>
    <string name="contact_us">Contact Us</string>
    <string name="trouble">Trouble?</string>
    <string name="verification_msg">Type in verification code</string>
    <string name="new_pwd_msg">Type in new password</string>
    <string name="verification_code">Verification Code</string>
    <string name="add_applicant">Add applicant</string>
    <string name="userddetails">User Details</string>
    <string name="applicant_details">Applicant Details</string>
    <string name="loan">Loan Amount</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="pan">PAN No (optional)</string>
    <string name="adhaar">ADHAAR No (optional)</string>
    <string name="voterid">Voter Id (optional)</string>
    <string name="submit">Submit</string>
    <string name="loan_cant_greater">Amount can\'t be greater than 100000</string>
    <string name="invalid_pan">Invalid pan no.</string>
    <string name="invalid_voter_id">Invalid voter id</string>
    <string name="invalid_adhaar">Invalid adhaar no.</string>
    <string name="add">Add</string>
    <string name="anyoftheREquired">Any of the following is required PAN/Adhaar/Voter Id</string>
    <string name="panoradhar">Any of the following is required PAN or Adhaar</string>
    <string name="pan_required">PAN is required.</string>
    <string name="logged_in">Successfully logged in.</string>
    <string name="user_added">User successfully added</string>
    <string name="less_than_3">minimun 3 char required</string>
</resources>
