<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/login_cardview_color">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_cardview_drawable"
            android:paddingStart="@dimen/_14sdp"
            android:paddingTop="@dimen/_20sdp"
            android:paddingEnd="@dimen/_14sdp"
            android:paddingBottom="@dimen/_20sdp">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/applicant_details"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_16sdp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tIFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textSize="@dimen/_12sdp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tILastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tIFirstName"
                android:layout_marginTop="@dimen/_8sdp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textSize="@dimen/_12sdp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tIEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tILastName"
                android:layout_marginTop="@dimen/_8sdp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/_12sdp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tILoan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tIEmail"
                android:layout_marginTop="@dimen/_8sdp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etLoanValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/loan"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="@dimen/_12sdp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tIPan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tILoan"
                android:layout_marginTop="@dimen/_8sdp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPanNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pan"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textSize="@dimen/_12sdp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tIadhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tIPan"
                android:layout_marginTop="@dimen/_8sdp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etAdhar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/adhaar"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="12"
                    android:textSize="@dimen/_12sdp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tIVoterId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tIadhar"
                android:layout_marginTop="@dimen/_8sdp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etVoterId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/voterid"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:textSize="@dimen/_12sdp" />

            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>


        <TextView
            android:layout_alignParentBottom="true"
            android:id="@+id/tvAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_36sdp"
            android:background="@drawable/login_button_drawable"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_32sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/add"
            android:textColor="@color/login_cardview_color"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>