<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_dark"
        android:orientation="vertical"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/blue">

        </RelativeLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_centerInParent="true"
        android:id="@+id/cardviewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:cardCornerRadius="@dimen/_6sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/login_cardview_drawable"
            android:paddingStart="@dimen/_14sdp"
            android:paddingTop="@dimen/_20sdp"
            android:paddingEnd="@dimen/_14sdp"
            android:paddingBottom="@dimen/_20sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/login_caps"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_16sdp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tILUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:textSize="@dimen/_12sdp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/_14sdp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tILUsername"
                android:layout_marginTop="@dimen/_8sdp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textSize="@dimen/_12sdp" />

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_marginTop="-20dp"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_36sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardviewLogin"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_button_drawable"
        android:gravity="center"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/login_caps"
        android:textStyle="bold"
        android:textColor="@color/login_cardview_color"
        android:textSize="@dimen/_12sdp" />


    <TextView
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_below="@id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/Reset_password"
        android:textColor="@color/login_cardview_color"
        android:textSize="@dimen/_14sdp" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>